2001-10-22 Alexander Rawass <alexannika@users.sourceforge.net>

	* added bindings for joy-buttons
	  works only for some commands
	* ordered .vegastrikerc better
	
	
2001-10-22 Daniel Horn <hellcatv@hotmail.com>
	* modified units to go in <data>/unit/<unitname> or <data>/unit/<factionname>/<unitname>
	* modified textures go either in the "current dir" or in <data>/textures/ for shared textures
	* modified sounds to either go in the current dir or <data>/sounds
	* modified animations to go in <currentdir>/animations
	* modified sprites to go in <currentdir>/sprites
	* allowed flat data directories too :-)
	* changed the number of times the sound's location was updated to once every physics phase
	* fixed  a problem with weapons (one that had been there for a while) that weapons would be fired by the AI script and not be aligned to a physics frame... this produced a somewhat cool but undesirable effect to have the weapons seem to carry with them a lot of inertia  so I made the unit remember when a shot was fired, and then instead "fire it" at the physics frame 
	* problem caused: because the physics frame deals with the "next" frame instead of this one....  so I had to use the saved data from the previous frame...which is somewhat inaccurate as I do not know the parent of this unit (may cause problems with a turret on a wildly evading starship)


2001-10-21 Daniel Horn <hellcatv@hotmail.com>

	* added Sound support
	* added buffers share preloaded sounds
	* added heuristic that will take X sounds of one type and N closest sounds
	* modified weapon sounds to be present on the mount (with exception of beams)
	* added sounds in unit config file and global config file for common things like explosions, etc
	* added music that will determine the "badness" of current situation and play sounds accordingly


2001-10-21 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added mapping from string to KBHandler to config_xml
	* modified firekeyboard.h